# ShellInventory

./: CMakeLists.txt  Main.qml  README.md  main.cpp
includes/: databasemanager.h  historyfilterlistmodel.h  historylistmodel.h  inventorylistmodel.h  inventorymanager.h  inventorysortlistmodel.h
qml/: InventoryTable.qml
qml/components/: Cell.qml
qml/pages/: EditPage.qml  HistoryPage.qml
src/: databasemanager.cpp  historyfilterlistmodel.cpp  historylistmodel.cpp  inventorylistmodel.cpp  inventorymanager.cpp  inventorysortlistmodel.cpp
